WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254096
TestWebKitAPI.WebKit.AutoLayoutIntegration times out when enabling UI side compositing
https://bugs.webkit.org/show_bug.cgi?id=254096
Summary
TestWebKitAPI.WebKit.AutoLayoutIntegration times out when enabling UI side co...
Charlie Wolfe
Reported
2023-03-17 18:02:23 PDT
This is happening because RemoteLayerTreeDrawingArea does not implement autosizing code.
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2023-03-17 18:03:00 PDT
rdar://104037445
Charlie Wolfe
Comment 2
2023-03-17 18:07:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11670
EWS
Comment 3
2023-03-19 20:34:48 PDT
Committed
261853@main
(049d8918d770): <
https://commits.webkit.org/261853@main
> Reviewed commits have been landed. Closing PR #11670 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug